Set up create endpoint
