# swagger/v1/swagger.json
@@ -5,6 +5,80 @@
     "version": "v1"
   },
   "paths": {
+    "/people": {
+      "post": {
+        "summary": "create person",
+        "parameters": [
+
+        ],
+        "responses": {
+          "201": {
+            "description": "successful",
+            "content": {
+              "application/json": {
+                "example": {
+                  "id": 85,
+                  "first_name": "Person",
+                  "last_name": "1",
+                  "created_at": "2023-05-18T15:11:19.478Z",
+                  "updated_at": "2023-05-18T15:11:19.478Z"
+                },
+                "schema": {
+                  "$ref": "#/components/schemas/person"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "missing body",
+            "content": {
+              "application/json": {
+                "example": {
+                  "error": "param is missing or the value is empty: person"
+                },
+                "schema": {
+                  "$ref": "#/components/schemas/error"
+                }
+              }
+            }
+          },
+          "422": {
+            "description": "invalid",
+            "content": {
+              "application/json": {
+                "example": {
+                  "error": "Last name can't be blank"
+                },
+                "schema": {
+                  "$ref": "#/components/schemas/error"
+                }
+              }
+            }
+          }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "first_name": {
+                    "type": "string"
+                  },
+                  "last_name": {
+                    "type": "string"
+                  }
+                },
+                "required": [
+                  "first_name",
+                  "last_name"
+                ]
+              }
+            }
+          }
+        }
+      }
+    },
     "/people/{id}": {
       "get": {
         "summary": "show person",
@@ -25,11 +99,14 @@
             "content": {
               "application/json": {
                 "example": {
-                  "id": 34,
+                  "id": 86,
                   "first_name": "Person",
-                  "last_name": "1",
-                  "created_at": "2023-05-18T14:05:52.775Z",
-                  "updated_at": "2023-05-18T14:05:52.775Z"
+                  "last_name": "2",
+                  "created_at": "2023-05-18T15:11:19.496Z",
+                  "updated_at": "2023-05-18T15:11:19.496Z"
+                },
+                "schema": {
+                  "$ref": "#/components/schemas/person"
                 }
               }
             }
@@ -40,6 +117,9 @@
               "application/json": {
                 "example": {
                   "error": "not found"
+                },
+                "schema": {
+                  "$ref": "#/components/schemas/error"
                 }
               }
             }
